--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "datatables.net-dt": "^1.13.8",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
